# cw-simple-assets

./: Cargo.toml  README.md
src/: lib.rs
